app/assets/stylesheets/home.css.scss
// Place all the styles related to the Home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.row.secondary-content{
  display: inline-block;
  .col-md-8{
    height: 90vh;
  }
}

.secondary-side-content{
  height: 100%;    
}
#stats-div{
  text-align: left;
}
.secondary-main-content{
  height: 100%;    
}
.project-description{
  text-align: center;
}
/* Carousel base class */
.carousel {
  height: 90vh;
  margin-bottom: 50px;
}
/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  z-index: 10;
  background-color: black;
  opacity:0.6;
}
.carousel-img{
  height:90vh;  
}
/* Declare heights because of positioning of img element */
.carousel .item {
  height: 90vh;
  background-color: #777;
}
.carousel-inner > .item > img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 90vh;
}
.carousel-divider{
  margin-top: 0px !important;
  margin-bottom: 40px !important;
}
/* Featurettes
------------------------- */

.featurette-divider {
  clear: both;
  margin-top: 40px;
  margin-bottom: 20px;
  /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -1px;
}
.featured-header.text-muted{
  margin-top: 0px;
  padding-top: 0px;
}

/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 768px) {

  .carousel-caption p {
    margin-bottom: 20px;
    font-size: 21px;
    line-height: 1.4;
  }

  .featurette-heading {
    font-size: 50px;
  }
}

@media (min-width: 992px) {
  .featurette-heading {
    margin-top: 120px;
  }
}
  
// .row.featurette{
//   img.col-md-5{
//     background-color: black;  
//     display: inline-block;
//     vertical-align: middle;
//     float: none;
//     height:500%;
// 
//     
//   }    
//}
.slogan{
  text-align: center;  
}
#news-feed{
  height: 70%;
  overflow-y: hidden;
  width: 100%;
//   hr{
//     color: black;  
//   }
  div{
    width:100%;
    border-radius: 6px;
    background-color: white !important;
    
  }    
}

#stats-row{

  .item_title{
    text-align: center;  
  }

  border-radius: 6px;
  height:25%;
  vertical-align:bottom;
  .featurette-divider{
    color: black;  
  }
  div{
    width: 90% ;
    background-color: white !important;  
    -moz-box-shadow: 0 0px 0px 0px #9E9E9E !important;
  -webkit-box-shadow: 0 0px 0px 0px #9E9E9E !important;
  box-shadow: 0 0px 0px 0px #9E9E9E !important;  
    
  }
  
}
.container.marketing{
  text-align: center;
  .col-md-4{
    p{
      text-align:left;  
    }  
  }
}
.featurette-image{
  width: 100%; 
  height: 100%;
  display:block;
  //border: 1px solid black;
}
.featurette{
  .col-md-8{
    height:100%;  
  }
}
.featured-header.text-muted{
  text-align: center;
  vertical-align: top;
}
.img-rounded{
  -moz-box-shadow: 0 2px 3px 1px #9E9E9E;
  -webkit-box-shadow: 0 2px 3px 1px #9E9E9E;
  box-shadow: 0 2px 3px 1px #9E9E9E;  
}
#news-feed{
  max-height: 500px;
  text-align: left;
  .item{
    //height: 100% !important;  
  }
  
}
.second-footer{
  //width: 95%;
  //text-align: center;
}
.home-controller.index-action{
  div.container.mainContent {
    width:100% !important ; 
  }
}
.collaborate-img{
  height:140px;  
}
.first-column{
  clear:both;  
}
.invisible{
  visibility: hidden;  
}
.three-col{
  clear: both;  
  width:100% !important;
  .collaborate-img{
    width: 310px !important;
  }
}
.isense-desc{
  overflow: auto;  
  .welcome-two{
    margin-bottom: 20px !important;
  }
}
.ternary-upper{
  margin-bottom: 20px !important;
}
.ternary-content{
  display:block;
  height:85vh;
  .news-prev-wrapper{
  height: 60vh;
  overflow-y: scroll;
  background-color: white !important;
  }
}
/* GLOBAL STYLES
-------------------------------------------------- */
/* Padding below the footer and lighter body text */

body {
  padding-bottom: 40px;
  color: #5a5a5a;
}

